# Copyright 2023 Canonical Ltd.
# See LICENSE file for licensing details.

[tool.poetry]
name = "data-integrator"
version = "0.1.0"
description = "An integrator charm for handling database credentials"
authors = [
    "Mykola Marzhan <mykola.marzhan@canonical.com>"
]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ops = "^2.0.0"

[tool.poetry.group.dev.dependencies]
coverage = {extras = ["toml"], version = "^6.4.4"}
pytest = "^7.1.3"
isort = "^5.10.1"
black = "^22.8.0"
pyproject-flake8 = "^5.0.4"
flake8-docstrings = "^1.6.0"
flake8-copyright = "^0.2.3"
flake8-builtins = "^1.5.3"
pep8-naming = "^0.13.2"
codespell = "^2.2.1"
pytest-operator = "^0.22.0"
mysql-connector-python = "^8.0.31"
psycopg2-binary = "^2.9.5"
pymongo = "^4.2.0"
kazoo = "^2.8.0"
kafka-python = "^2.0.2"
juju="^2.9.38"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Testing tools configuration
[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"
asyncio_mode = "auto"
markers = ["unstable"]

# Formatting tools configuration
[tool.black]
line-length = 99
target-version = ["py38"]

[tool.isort]
profile = "black"

# Linting tools configuration
[tool.flake8]
max-line-length = 99
max-doc-length = 99
max-complexity = 10
exclude = [".git", "__pycache__", ".tox", "build", "dist", "*.egg_info", "venv"]
select = ["E", "W", "F", "C", "N", "R", "D", "H"]
# Ignore W503, E501 because using black creates errors with this
# Ignore D107 Missing docstring in __init__
ignore = ["W503", "E501", "D107"]
# D100, D101, D102, D103: Ignore missing docstrings in tests
per-file-ignores = ["tests/*:D100,D101,D102,D103,D104"]
docstring-convention = "google"
# Check for properly formatted copyright header in each file
copyright-check = "True"
copyright-author = "Canonical Ltd."
copyright-regexp = "Copyright\\s\\d{4}([-,]\\d{4})*\\s+%(author)s"
