# Copyright 2024 Canonical Ltd.
# See LICENSE file for licensing details.

[tool.poetry]
package-mode = false
requires-poetry = ">=2.0.0"

[tool.poetry.dependencies]
cryptography = "==48.0.0"
pydantic = "==2.13.4"
tenacity = "*"

python = "^3.10"
ops = "^3.7.0"
pymongo = "^4.17.0"
kafka-python = "^2.3.1"
kazoo = "^2.11.0"
psycopg2 = "^2.9.12"
mysql-connector-python = "^9.7.0"
requests = "^2.34.2"
pyhive = { extras = ["hive_pure_sasl"], version = "^0.7.0" }
spark-k8s-test = "^0.0.4"
cassandra-driver = "^3.30.0"
charmlibs-pathops = "^1.2.1"
valkey = "^6.1.1"
[tool.poetry.group.charm-libs.dependencies]
